# vectormathbench

./: .clang-format  .gitignore  BENCHMARKS.md  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  intermediate-benchmarks.md  run.bat  run.sh
.github/workflows/: ci.yml
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
src/: main.cpp  simplemath.hpp
src/shims/linux/: sal.h
